--- a/script/generate-api/template/baseApi.mustache
+++ b/script/generate-api/template/baseApi.mustache
@@ -1,36 +1,19 @@
-import { setupAxiosInterceptors } from '@x-mart/utils/src';
 import router from '@/router/index';
-import store from 'store2';
+import { LOCAL_TOKEN_KEY } from '@/constant/global';
+import useAxiosInterceptors from '@/utils/use-axios';
+import { removeStorage } from '@/utils/local-storage';
 
-const STORAGE_TOKEN_KEY = 'token';
-const { get: GET, post: POST } = setupAxiosInterceptors({
+const { get, post } = useAxiosInterceptors({
     url: import.meta.env.VITE_API_URL as string,
-    expireCallback: () => {
-        // 退出登录
-        // removeStorage(STORAGE_TOKEN_KEY);
-        // removeStorage('userInfo');
-        store.local.remove(STORAGE_TOKEN_KEY);
-        store.local.remove('userInfo');
-        router.push(`/login?redirect=${router.currentRoute.value.path}`);
-    },
+
     storageTokenKey: 'token',
-    successValidate(responseData) {
-        return responseData.code === 200 ? true : false;
-        // return true;
+
+    // 退出登录
+    expireCallback: () => {
+        removeStorage(LOCAL_TOKEN_KEY);
+        removeStorage('userInfo');
+        router.push(`/login?redirect=${router.currentRoute.value.path}`);
     },
 });
 
-async function downloadFileFromURL(url?: string, fileName = ''): Promise<boolean> {
-    if (!url) {
-        return false;
-    }
-
-    const a = document.createElement('a');
-    a.href = url;
-    a.download = fileName;
-
-    a.click();
-    return true;
-}
-
-export { GET, POST, downloadFileFromURL };
+export { get, post };
