--- a/script/generate-api/template/baseApi.mustache
+++ b/script/generate-api/template/baseApi.mustache
@@ -5,6 +5,7 @@ import { clearStorage } from '@/utils/local-storage';
 const { get, post } = useAxiosInterceptors({
     url: import.meta.env.VITE_API_URL as string,
 
+    storageUrlKey: 'baseUrl',
     storageTokenKey: 'token',
 
     // 退出登录
