ci(vue-app): open-api

--- a/script/generate-api/template/baseApi.mustache
+++ b/script/generate-api/template/baseApi.mustache
@@ -1,6 +1,6 @@
 import router from '@/router/index';
 import useAxiosInterceptors from '@/utils/use-axios';
-import { clearStorage } from '@/utils/local-storage';
+import { removeBaseUrl, removeUserToken, removeUserInfo, removePermission } from '@/utils/storage';
 
 const { get, post } = useAxiosInterceptors({
     url: import.meta.env.VITE_API_URL as string,
@@ -10,7 +10,11 @@ const { get, post } = useAxiosInterceptors({
 
     // 退出登录
     expireCallback: () => {
-        clearStorage();
+        // clearStorage();
+        removeBaseUrl();
+        removeUserToken();
+        removeUserInfo();
+        removePermission();
         router.push(`/login?redirect=${router.currentRoute.value.path}`);
     },
 });
