perf: 生成接口模版调整

--- a/script/generate-api/template/index.mustache
+++ b/script/generate-api/template/index.mustache
@@ -2,8 +2,8 @@
 /* eslint-disable */
 
 {{>licenseInfo}}
-
 export * from "./api";
 export * from "./base";
-{{#withSeparateModelsAndApi}}export * from "./{{tsModelPackage}}";
+{{#withSeparateModelsAndApi}}
+export * from "./{{tsModelPackage}}";
 {{/withSeparateModelsAndApi}}
