--- a/script/generate-api/template/apiInner.mustache
+++ b/script/generate-api/template/apiInner.mustache
@@ -3,11 +3,9 @@
 /* eslint-disable */
 
 {{>licenseInfo}}
-
 import { GET, POST } from '{{apiRelativeToRoot}}base';
 
 {{#imports}}
-// @ts-ignore
 import type { {{classname}} } from '{{apiRelativeToRoot}}{{tsModelPackage}}';
 {{/imports}}
 {{/withSeparateModelsAndApi}}
@@ -17,7 +15,9 @@ import type { {{classname}} } from '{{apiRelativeToRoot}}{{tsModelPackage}}';
 {{#operations}}
 {{#operation}}
 /**
- * {{&notes}}
+ {{#notes}}
+ * @notes {{&notes}}
+ {{/notes}}
  {{#summary}}
  * @summary {{&summary}}
  {{/summary}}
@@ -26,11 +26,13 @@ import type { {{classname}} } from '{{apiRelativeToRoot}}{{tsModelPackage}}';
  {{/tags}}
  {{#allParams}}
  * @param {{=<% %>=}}{<%#isEnum%><%&datatypeWithEnum%><%/isEnum%><%^isEnum%><%&dataType%><%#isNullable%> | null<%/isNullable%><%/isEnum%>}<%={{ }}=%> {{^required}}[{{/required}}{{paramName}}{{^required}}]{{/required}} {{description}}
- {{/allParams}} {{#isDeprecated}}
- * @deprecated{{/isDeprecated}}
+ {{/allParams}}
+ {{#isDeprecated}}
+ * @deprecated
+ {{/isDeprecated}}
  * @return { {{returnType}} }
  */
-export function {{operationId}}({{#hasParams}}data:{{^bodyParam}}{ {{/bodyParam}}{{/hasParams}}{{#allParams}}{{#isQueryParam}}{{paramName}}{{^required}}?{{/required}}: {{#isEnum}}{{{datatypeWithEnum}}}{{/isEnum}}{{^isEnum}}{{{dataType}}}{{#isNullable}} | null{{/isNullable}}{{/isEnum}}; {{/isQueryParam}}{{#isBodyParam}}{{{dataType}}}{{/isBodyParam}}{{/allParams}}{{^bodyParam}}{{#hasParams}}}{{/hasParams}}{{/bodyParam}}): Promise<{{#returnType}}{{returnType}}['data']{{/returnType}}{{^returnType}}any{{/returnType}}> {
+export function {{operationId}}({{#hasParams}}data: {{^bodyParam}}{ {{/bodyParam}}{{/hasParams}}{{#allParams}}{{#isQueryParam}}{{paramName}}{{^required}}?{{/required}}: {{#isEnum}}{{{datatypeWithEnum}}}{{/isEnum}}{{^isEnum}}{{{dataType}}}{{#isNullable}} | null{{/isNullable}}{{/isEnum}}; {{/isQueryParam}}{{#isBodyParam}}{{{dataType}}}{{/isBodyParam}}{{/allParams}}{{^bodyParam}}{{#hasParams}}}{{/hasParams}}{{/bodyParam}}): Promise<{{#returnType}}{{returnType}}['data']{{/returnType}}{{^returnType}}any{{/returnType}}> {
     const path = `{{{path}}}`{{#pathParams}}.replace(`{${"{{baseName}}"}}`, encodeURIComponent(String({{paramName}}))){{/pathParams}};
 
     let localVarQueryParameter = { params: {{#hasParams}}data{{/hasParams}}{{^hasParams}}{}{{/hasParams}} } as any;
