--- a/script/generate-api/template/model.mustache
+++ b/script/generate-api/template/model.mustache
@@ -1,19 +1,32 @@
 /* tslint:disable */
 /* eslint-disable */
+
 {{>licenseInfo}}
-{{#withSeparateModelsAndApi}}{{#hasAllOf}}{{#allOf}}
-// May contain unused imports in some cases
-// 123
+{{#withSeparateModelsAndApi}}
+{{#hasAllOf}}
+{{#allOf}}
 // @ts-ignore
-import { {{class}} } from './{{filename}}';{{/allOf}}{{/hasAllOf}}{{#hasOneOf}}{{#oneOf}}
-// May contain unused imports in some cases
-// 345
+import { {{class}} } from './{{filename}}';
+{{/allOf}}
+{{/hasAllOf}}
+{{#hasOneOf}}
+{{#oneOf}}
 // @ts-ignore
-import { {{class}} } from './{{filename}}';{{/oneOf}}{{/hasOneOf}}{{^hasAllOf}}{{^hasOneOf}}{{#imports}}
-// May contain unused imports in some cases
-// 789
+import { {{class}} } from './{{filename}}';
+{{/oneOf}}
+{{/hasOneOf}}
+{{^hasAllOf}}
+{{^hasOneOf}}
+{{#imports}}
 // @ts-ignore
-import type { {{class}} } from './{{filename}}';{{/imports}}{{/hasOneOf}}{{/hasAllOf}}{{/withSeparateModelsAndApi}}
-{{#models}}{{#model}}
+import type { {{class}} } from './{{filename}}';
+{{/imports}}
+{{/hasOneOf}}
+{{/hasAllOf}}
+
+{{/withSeparateModelsAndApi}}
+{{#models}}
+{{#model}}
 {{#isEnum}}{{>modelEnum}}{{/isEnum}}{{#oneOf}}{{#-first}}{{>modelOneOf}}{{/-first}}{{/oneOf}}{{#allOf}}{{#-first}}{{>modelAllOf}}{{/-first}}{{/allOf}}{{^isEnum}}{{^oneOf}}{{^allOf}}{{>modelGeneric}}{{/allOf}}{{/oneOf}}{{/isEnum}}
-{{/model}}{{/models}}
+{{/model}}
+{{/models}}
