--- a/script/open-api/template/baseApi.mustache
+++ b/script/open-api/template/baseApi.mustache
@@ -1,116 +1,24 @@
-/* tslint:disable */
-/* eslint-disable */
-{{>licenseInfo}}
+import router from '@/router/index';
+import { clearStorage } from '@/utils/local-storage';
+import useAxiosInterceptors from '@/utils/use-axios';
 
-import type { Configuration } from './configuration';
-// Some imports not used depending on template conditions
-// @ts-ignore
-import type { AxiosPromise, AxiosInstance, RawAxiosRequestConfig } from 'axios';
-import globalAxios from 'axios';
+const { get: GET, post: POST } = useAxiosInterceptors({
+    url: import.meta.env.VITE_API_URL as string,
 
-export const BASE_PATH = "{{{basePath}}}".replace(/\/+$/, "");
-
-/**
- *
- * @export
- */
-export const COLLECTION_FORMATS = {
-    csv: ",",
-    ssv: " ",
-    tsv: "\t",
-    pipes: "|",
-};
-
-/**
- *
- * @export
- * @interface RequestArgs
- */
-export interface RequestArgs {
-    url: string;
-    options: RawAxiosRequestConfig;
-}
-
-/**
- *
- * @export
- * @class BaseAPI
- */
-export class BaseAPI {
-    protected configuration: Configuration | undefined;
-
-    constructor(configuration?: Configuration, protected basePath: string = BASE_PATH, protected axios: AxiosInstance = globalAxios) {
-        if (configuration) {
-            this.configuration = configuration;
-            this.basePath = configuration.basePath ?? basePath;
+    // 成功状态
+    successValidate: data => {
+        if (data.code === 200) {
+            return true;
         }
-    }
-};
 
-/**
- *
- * @export
- * @class RequiredError
- * @extends {Error}
- */
-export class RequiredError extends Error {
-    constructor(public field: string, msg?: string) {
-        super(msg);
-        this.name = "RequiredError"
-    }
-}
+        return false;
+    },
 
-interface ServerMap {
-    [key: string]: {
-        url: string,
-        description: string,
-    }[];
-}
+    // 退出登录
+    expireCallback: () => {
+        clearStorage();
+        router.push(`/login?redirect=${router.currentRoute.value.path}`);
+    },
+});
 
-/**
- *
- * @export
- */
-export const operationServerMap: ServerMap = {
-    {{#apiInfo}}
-    {{#apis}}
-    {{#operations}}
-    {{#operation}}
-    {{#servers}}
-    {{#-first}}
-    "{{{classname}}}.{{{nickname}}}": [
-    {{/-first}}
-        {
-            url: "{{{url}}}",
-            description: "{{{description}}}{{^description}}No description provided{{/description}}",
-            {{#variables}}
-            {{#-first}}
-            variables: {
-                {{/-first}}
-                {{{name}}}: {
-                    description: "{{{description}}}{{^description}}No description provided{{/description}}",
-                    default_value: "{{{defaultValue}}}",
-                    {{#enumValues}}
-                    {{#-first}}
-                    enum_values: [
-                    {{/-first}}
-                        "{{{.}}}"{{^-last}},{{/-last}}
-                    {{#-last}}
-                    ]
-                    {{/-last}}
-                    {{/enumValues}}
-                    }{{^-last}},{{/-last}}
-                {{#-last}}
-            }
-            {{/-last}}
-            {{/variables}}
-        }{{^-last}},{{/-last}}
-    {{#-last}}
-    ],
-    {{/-last}}
-    {{/servers}}
-    {{/operation}}
-    {{/operations}}
-    {{/apis}}
-    {{/apiInfo}}
-}
+export { GET, POST };
