--- a/script/open-api/template/index.mustache
+++ b/script/open-api/template/index.mustache
@@ -1,7 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
 {{>licenseInfo}}
-
 export * from "./api";
-export * from "./configuration";
+export * from "./base";
 {{#withSeparateModelsAndApi}}export * from "./{{tsModelPackage}}";{{/withSeparateModelsAndApi}}
